新增chrome自动切换代码上网方法

--- a/学习资料收集整理.md
+++ b/学习资料收集整理.md
@@ -25,4 +25,20 @@ http://blog.csdn.net/gengxuelei/article/details/52514603
 ## 2.常用触摸板手势
 
 #【ubuntu】
+## 1.shadowsocks环境搭建
 http://blog.csdn.net/szsteel1/article/details/54773544?utm_medium=referral&utm_source=itdadao
+## 2.代理设置
+https://github.com/feixiao/ubuntu/blob/master/proxy.md
+## 3.适合ubuntu环境的笔记本
+https://certification.ubuntu.com/certification/desktop/
+
+#【chrome浏览器】
+## 1.自动切换代理上网
+
+![chrome_SwitchyOmega_set_01](chrome_switchyomega_set_01.png)
+
+![chrome_SwitchyOmega_set_02](chrome_switchyomega_set_02.png)
+
+![chrome_SwitchyOmega_set_03](chrome_switchyomega_set_03.png)
+
+规则列表网址:https://raw.githubusercontent.com/gfwlist/gfwlist/master/gfwlist.txt
