新增sublime插件安装和快捷键说明

--- a/学习资料收集整理.md
+++ b/学习资料收集整理.md
@@ -7,6 +7,8 @@ http://androidxref.com  android的各个版本，可用于搜索源文件
 
 http://www.grepcode.com/  android各个版本java源码查看
 
+3、android编译要求和教程
+https://source.android.com/source/requirements
 #【macbook】
 ## 1.翻墙
 ### 1.1shadowsocks软件设置
@@ -42,3 +44,50 @@ https://certification.ubuntu.com/certification/desktop/
 ![chrome_SwitchyOmega_set_03](chrome_switchyomega_set_03.png)
 
 规则列表网址:https://raw.githubusercontent.com/gfwlist/gfwlist/master/gfwlist.txt
+
+#【sublime text3】
+## 插件安装
+### 1、安装插件下载器<br>
+Ctrl+Shift+P调出控制面板，输入install，点击Package Control: Install Package，就可以查找并安装各种插件了
+
+### 2、c++相关插件
+#### 2.1 解决中文乱码问题 ConvertToUTF8
+a.Ctrl+Shift+P调出控制面板，输入install，点击Package Control: Install Package等装好<br>
+b.输入ConvertToUTF8等装好<br>
+c.装成功后，在菜单下会出现如下新增的子菜单
+![ConvertToUTF8_plug_01](converttoutf8_plug_01.png)
+
+### 3.查看和删除已经安装好的插件
+a.Ctrl+Shift+P<br>
+b.输入remove packages,就可以看到哪些已经安装好的插件可以删除
+
+### 3. 整理美化编写的C++代码
+a.a.Ctrl+Shift+P调出控制面板，输入install，点击Package Control: Install Package等装好<br>
+b.输入SublimeAStyleFormatter等装好<br>
+c.快捷键Ctrl+Alt+F,针对整个文件整理
+
+### 4.C++静态代码检测
+a.安装 cppcheck插件<br>
+插件网址:http://cppcheck.sourceforge.net ,下载好后安装,把安装目录添加到系统环境Path变量中
+![cppcheck_path_set](cppcheck_path_set.png)
+
+b.然后通过插件管理器分别安装SublimeLinter和SublimeLinter-cppcheck<br>
+Ctrl+Shift+P调出控制面板输入SublimeLinter，激活Linter和Linting<br>
+如图是激活状态:<br>
+![show_Sublime_linter_enable_state](show_sublime_linter_enable_state.png)
+
+c.使用:通过菜单Tools -> SublimeLinter -> Mark Style，选择No Column Highlights Line。
+
+## 快捷键功能
+### 网站
+https://www.zhihu.com/question/19976788
+### 1、格式化粘贴 Shift+Ctrl+V
+Ctrl+W：关闭当前打开文件<br>
+Ctrl+D：选择单词，重复可增加选择下一个相同的单词<br>
+Ctrl+N：新建窗口<br>
+Ctrl+K+B：开关侧栏<br>
+Ctrl+Shift+M：选中当前括号内容，重复可选着括号本身<br>
+Ctrl+/：注释当前行<br>
+F11：全屏<br>
+Alt+F3：选择所有相同的词<br>
+Alt+Shift+数字：分屏显示<br>
