--- a/学习资料收集整理.md
+++ b/学习资料收集整理.md
@@ -1,4 +1,4 @@
-#【android学习资料】
+# 【android学习资料】
 1、别人在github分享整理的android资料
 https://github.com/lizhangqu/CoreLink
 
@@ -11,9 +11,9 @@ http://www.grepcode.com/  android各个版本java源码查看
 https://source.android.com/source/requirements
 #【macbook】
 ## 1.翻墙
-### 1.1shadowsocks软件设置
+### 1.1 mac shadowsocks软件设置
 https://fanach.github.io/post/ss-macos/
-### 1.2shadowsocks关于终端设置
+### 1.2 shadowsocks关于终端设置
 https://blog.fazero.me/2015/08/31/%E5%88%A9%E7%94%A8proxychains%E5%9C%A8%E7%BB%88%E7%AB%AF%E4%BD%BF%E7%94%A8socks5%E4%BB%A3%E7%90%86/
 
 http://blog.csdn.net/gengxuelei/article/details/52514603
@@ -26,7 +26,7 @@ http://blog.csdn.net/gengxuelei/article/details/52514603
 
 ## 2.常用触摸板手势
 
-#【ubuntu】
+# 【ubuntu】
 ## 1.shadowsocks环境搭建
 http://blog.csdn.net/szsteel1/article/details/54773544?utm_medium=referral&utm_source=itdadao
 ## 2.代理设置
