--- a/数学/统计学/统计学.md
+++ b/数学/统计学/统计学.md
@@ -1,3 +1,41 @@
 
 #分布
 伯努利试验--组成-->二项分布--引出-->泊松分布
+
+
+数理统计的作用：
+有时候，去计算一个数据的平均值和方差时，当数据量很大时，很不方便，比如人口年龄统计，
+就不适合把每个人的年龄都知道，然后计算出平均值和方差；
+这时候就需要抽取数据中的某一部分，计算该部分的平均值和方差，近似地估计出全部数据的平均值和方差；
+全部数据叫总体
+部分数据叫样本
+
+参数估计：根据样本的平均值和方差估算出总体的平均值和方差
+假设检验：
+方差分析：
+回归分析：
+
+
+怎么根据n个样本均值分布计算出总体的方差和均值?
+
+$\sigma$:  表示总体的标准差
+
+n :表示一个样本里n个样本点
+
+$\sigma_1$:表示抽样分布的标准误差
+
+$\sigma$=$\sigma_1$ * $\sqrt{n}$ ：当选取的样本数越大，估计的越精确
+
+当n足够大时，样本的均值近似等于总体均值
+###标准误差
+就是一个抽样分布的标准差
+
+
+###中心极限定理是说
+>样本的平均值约等于总体的平均值。意思就是求出每个样本的平均值，总有有抽取了n个样本，<br>
+那么n个样本的平均值相加除以n，得到的就是总体平均值。<br>
+不管总体是什么分布，任意一个总体的样本平均值都会围绕在总体的整体平均值周围，并且呈正态分布。
+
+>作用：<br>
+1）在没有办法得到总体全部数据的情况下，我们可以用样本来估计总体
+2）根据总体的平均值和标准差，判断某个样本是否属于总体
