微积分笔记

--- a/数学/微积分/公式.md
+++ b/数学/微积分/公式.md
@@ -1,5 +1,7 @@
 
-$\lim\limits_{n\rightarrow{\infty}}$
+#极限公式
+1. $\mathop{lim}\limits_{x\to\infty}\frac{C}{x^n}$ = 0 ,C为常数且n>正整数
+1. $\mathop{lim}\limits_{x\to0^-}\frac{|x|}{x}$ = -1 ,$\mathop{lim}\limits_{x\to0^+}\frac{|x|}{x}$ = 1
 
 #指数公式
 1. $b^0$ = 1
