微积分学习笔记

--- a/数学/微积分/公式.md
+++ b/数学/微积分/公式.md
@@ -1,17 +1,17 @@
 
-#极限公式
+#<font color=red>极限公式</font>
 1. $\mathop{lim}\limits_{x\to\infty}\frac{C}{x^n}$ = 0 ,C为常数且n>正整数
 1. $\mathop{lim}\limits_{x\to0^-}\frac{|x|}{x}$ = -1 ,$\mathop{lim}\limits_{x\to0^+}\frac{|x|}{x}$ = 1
 
-#指数公式
+#<font color=red>指数公式</font>
 1. $b^0$ = 1
 1. $b^1$ = b
 1. $b^xb^y$ = $b^{x+y}$
 1. $\frac{b^x}{b^y}$ = $b^{x-y}$
 1. $(b^x)^y$ = $b^{xy}$
 
-#对数公式
-##对数法则
+#<font color=red>对数公式</font>
+##1. 对数法则
 1. $log_b(1)$ = 0
 1. $log_b(b)$ = 1
 1. $log_b(xy)$ = $log_b(x)$ + $log_b(y)$
@@ -19,7 +19,7 @@
 1. $log_b(x^y)$ = y$log_b(x)$
 1. $log_e(x)$ = $ln(x)$
 
-##换底法则
+##2. 换底法则
 ``条件:``b>1和c>1及x>0
 
 $log_b(x)$ = $\frac{log_c(x)}{log_c(b)}$
@@ -28,7 +28,33 @@ $log_b(x)$ = K$log_c(x)$,其中K为 $\frac{1}{log_c(b)}$
 
 意义：所有的不同底数的对数函数骑士是互为常数倍的,K为垂直拉伸K倍
 
-#定积分
+#<font color=red>导数公式</font>
+##基本公式
+1. $(C)^\prime = 0$
+1. $(x^n)^\prime = nx^{n-1}$
+1. $(sin\ x)^\prime = cos\ x$
+1. $(cos\ x)^\prime= -sin\ x$
+1. $(tan\ x)^\prime= sec^2\ x$
+1. $(cot\ x)^\prime= -csc^2\ x$
+1. $(sec\ x)^\prime= (sec\ x)(tan\ x)$
+1. $(csc\ x)^\prime= -(csc\ x)(cot\ x)$
+1. $(a^x)^\prime= a^xln\ a$
+1. $(e^x)^\prime= e^x$
+1. $(log_ax)^\prime= \frac{1}{xln\ a}$
+1. $(ln\ x)^\prime= \frac{1}{x}$
+1. $(arcsin\ x)^\prime= \frac{1}{\sqrt{1-x^2}}$
+1. $(arccos\ x)^\prime= -\frac{1}{\sqrt{1-x^2}}$
+1. $(arctan\ x)^\prime= \frac{1}{{1+x^2}}$
+1. $(arccot\ x)^\prime= -\frac{1}{{1+x^2}}$
+
+
+##和、差、商、积的求导法则
+>社u = u(x),v=v(x)都可导
+1.  $(u\underline{+}v)^\prime = u^\prime\underline{+}v\prime$
+1. $(Cu)^\prime = Cu^\prime$
+1. $(uv)^\prime = u^\prime{v}\underline{+}ua\prime$
+
+#<font color=red>定积分</font>
 1. $\int_{a}^{b}f(x)dx$ = - $\int_{b}^{a}f(x)dx$
 
 1. $\int_{a}^{a}f(x)dx$ = 0
