--- a/数学/微积分/微积分.md
+++ b/数学/微积分/微积分.md
@@ -1,1 +1,18 @@
-极限求解
+#知识关联
+1. 如果f(x)在a点极限存在,那么f(a)点连续,那么可导；
+2. 可导函数其实就是求极限的过程
+3. 可导函数比是连续函数,连续的函数不一定都是可导
+
+
+
+#定理
+1. > ``介值定理``：如果f在[a,b]上``连续``，并且f(a)<0且f(b)>0,那么在区间(a,b)上至少有一点c,
+使得f(c)=0。代之以f(a)>0且f(b)<0,同样成立
+1. > ``最大值和最小值定理``:如果f在[a,b]上``连续``，那么f在[a,b]上至少有一个最大值和最小值
+
+
+#导数
+##表现形式
+比如f(x) = $x^2$
+
+$f^\prime = \frac{dy}{dx} = \frac{d(x^2)}{dx} = \frac{d}{dx}(x^2) = 2x$
