微积分笔记

--- a/数学/微积分/公式.md
+++ b/数学/微积分/公式.md
@@ -3,6 +3,10 @@
 1. $\mathop{lim}\limits_{x\to\infty}\frac{C}{x^n}$ = 0 ,C为常数且n>正整数
 1. $\mathop{lim}\limits_{x\to0^-}\frac{|x|}{x}$ = -1 ,$\mathop{lim}\limits_{x\to0^+}\frac{|x|}{x}$ = 1
 
+###三角函数
+1. $\mathop{lim}\limits_{x\to0}\frac{sin\ x}{x}$ = 1
+1. $\mathop{lim}\limits_{x\to0}\frac{tan\ x}{x}$ = 1
+
 #<font color=red>指数公式</font>
 1. $b^0$ = 1
 1. $b^1$ = b
