微积分笔记

--- a/数学/微积分/公式.md
+++ b/数学/微积分/公式.md
@@ -1,5 +1,6 @@
 
-#<font color=red>极限公式</font>
+#<font color=red>极限</font>
+###公式
 1. $\mathop{lim}\limits_{x\to\infty}\frac{C}{x^n}$ = 0 ,C为常数且n>正整数
 1. $\mathop{lim}\limits_{x\to0^-}\frac{|x|}{x}$ = -1 ,$\mathop{lim}\limits_{x\to0^+}\frac{|x|}{x}$ = 1
 
@@ -7,6 +8,13 @@
 1. $\mathop{lim}\limits_{x\to0}\frac{sin\ x}{x}$ = 1
 1. $\mathop{lim}\limits_{x\to0}\frac{tan\ x}{x}$ = 1
 
+##极限法则
+1. > 无穷小0+无穷小1+...+无穷小n = 无穷小，n为有限个
+1. > 有界函数 * 无穷小 = 无穷小
+1. > n * 无穷小 = 无穷小
+1. > 无穷小0 * 无穷小1 * ... * 无穷小n = 无穷小
+1. $\mathop{lim}\limits[f(x)\underline{+}g(x)] = lim\ f(x)\underline{+} lim\ g(x) = A\underline{+}B$
+1. $lim[f(x)\bullet g(x)] = lim\ f(x)\bullet lim\ g(x) = A\bullet B$
 #<font color=red>指数公式</font>
 1. $b^0$ = 1
 1. $b^1$ = b
