--- a/数学/微积分/微积分.md
+++ b/数学/微积分/微积分.md
@@ -3,6 +3,14 @@
 2. 可导函数其实就是求极限的过程
 3. 可导函数比是连续函数,连续的函数不一定都是可导
 
+> 导数就是求极限的过程，然后总结出导数公式和导数法则，后面就可以根据这两个总结进行运算
+
+```mermaid
+graph LR
+  极限 --> 导数;
+  导数 --> 导数公式;
+  导数 --> 微分;
+```
 
 
 #定理
@@ -11,7 +19,15 @@
 1. > ``最大值和最小值定理``:如果f在[a,b]上``连续``，那么f在[a,b]上至少有一个最大值和最小值
 
 
-#导数
+#导数部分
+##导数
+1. $\mathop{lim}\limits_{x\to x0}\frac{f(x) - f(x_0)}{x-x0}$
+>如果x-x0$\rightarrow$0时的极限存在，则在x0处可导，并称这个极限为导数,记为$f^\prime(x0)$
+
+>导数是极限，因此存在的充分必要条件是左右极限存在且相等
+##导函数
+>导函数:如果x在M区间上都可导,就构成一个新函数,导函数
+
 ##表现形式
 比如f(x) = $x^2$
 
