微积分笔记

--- a/数学/微积分/公式.md
+++ b/数学/微积分/公式.md
@@ -1,4 +1,27 @@
 
+<!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
+<!-- code_chunk_output -->
+
+* [其他](#font-colorred其他font)
+* [极限](#font-colorred极限font)
+		* [公式](#公式)
+		* [三角函数](#三角函数)
+	* [极限法则](#极限法则)
+* [指数公式](#font-colorred指数公式font)
+* [对数公式](#font-colorred对数公式font)
+	* [1. 对数法则](#1-对数法则)
+	* [2. 换底法则](#2-换底法则)
+* [导数公式](#font-colorred导数公式font)
+	* [基本公式](#基本公式)
+	* [和、差、商、积的求导法则](#和-差-商-积的求导法则)
+* [定积分](#font-colorred定积分font)
+
+<!-- /code_chunk_output -->
+
+#<font color=red>其他</font>
+$1^2+2^2+3^2+.....+n^2 = \frac{n(n+1)(2n+1)}{6}$
+
+
 #<font color=red>极限</font>
 ###公式
 1. $\mathop{lim}\limits_{x\to\infty}\frac{C}{x^n}$ = 0 ,C为常数且n>正整数
@@ -11,6 +34,8 @@
 ##极限法则
 1. > 无穷小0+无穷小1+...+无穷小n = 无穷小，n为有限个
 1. > 有界函数 * 无穷小 = 无穷小
+
+
 1. > n * 无穷小 = 无穷小
 1. > 无穷小0 * 无穷小1 * ... * 无穷小n = 无穷小
 1. $\mathop{lim}\limits[f(x)\underline{+}g(x)] = lim\ f(x)\underline{+} lim\ g(x) = A\underline{+}B$
