--- a/数学/微积分/微积分.md
+++ b/数学/微积分/微积分.md
@@ -7,11 +7,14 @@
 
 ```mermaid
 graph LR
+  源函数 --> 极限
   极限 --> 导数;
-  导数 --> 导数公式;
+  极限 --> 定积分;
+  定积分 --> 不定积分;
+  不定积分 --> 源函数;
   导数 --> 微分;
 ```
-
+#2
 
 #定理
 1. > ``介值定理``：如果f在[a,b]上``连续``，并且f(a)<0且f(b)>0,那么在区间(a,b)上至少有一点c,
@@ -32,3 +35,15 @@ graph LR
 比如f(x) = $x^2$
 
 $f^\prime = \frac{dy}{dx} = \frac{d(x^2)}{dx} = \frac{d}{dx}(x^2) = 2x$
+
+
+
+
+| a | b |
+|---|---|
+| > | 1 |
+| 2 |   |
+
+#1
+dfsfddsf#1
+mojombo/github-flavored-markdown#1
