线性代数笔记

--- a/数学/微积分/线性代数.md
+++ b/数学/微积分/线性代数.md
@@ -3,7 +3,7 @@
 
 ```mermaid
 graph LR
-  源数据 --> 表示方法
+  线性方程组等数据源 --> 表示方法
   表示方法 --> 向量方程
   表示方法 --> 线性组合
   表示方法 --> 矩阵方程
@@ -18,6 +18,12 @@ graph LR
   互相转换 --> 线性组合
   互相转换 --> 矩阵方程
 ```
+
+定理：每个矩阵只有一个简化阶梯形矩阵
+
+##线性方程组
+2x+3y=5
+总结:$a_1x_1+a_2x_2+...+a_nx_n=b$,a就是实数，x就是未知变量
 
 
 ##向量方程
@@ -61,3 +67,17 @@ c & d\end{bmatrix}$,若$ad-bc\neq0$,则A可逆且$A^{-1}=\frac{1}{ad-bc}\begin{b
 -c & a\end{bmatrix}$
 
 >``定理2``:若A是可逆的n x n矩阵，则对每一个$R^n$中的b,方程Ax=b有唯一解x=$A^{-1}b$
+
+
+
+
+##零空间
+Ax = 0,如果存在零空间，则零空间的维数与自由变量个数一样
+
+##名词解释
+>``列向量``：就是矩阵的一列的向量  
+>``列空间``：一个矩阵的列向量的线性组合  
+>``列空间的维数或秩``:维数就是基底向量的个数
+>``基底向量``:矩阵中线性无关的向量,它是被包含在列向量里的；矩阵通过简化后,有主元的列向量就基底向量
+
+>``1``:一个矩阵是线性无关的，那么它其实最后可以简化为单位矩阵，每次梯形简化就是一次矩阵相乘
