线性代数笔记

--- a/数学/微积分/线性代数.md
+++ b/数学/微积分/线性代数.md
@@ -21,6 +21,11 @@ graph LR
 
 定理：每个矩阵只有一个简化阶梯形矩阵
 
+#向量空间
+>``向量空间``：数学其他领域也有加法和标量乘法,这些一样的运输规则，可以抽象为向量空间,然后用线性代数运算  
+
+##向量空间公理:
+
 ##线性方程组
 2x+3y=5
 总结:$a_1x_1+a_2x_2+...+a_nx_n=b$,a就是实数，x就是未知变量
@@ -59,7 +64,8 @@ Ax=b
 1. $(ABC)^T=C^TB^TA^T$,推广到n个矩阵，顺序相反
 ##矩阵的逆$A^{-1}$
 I为单位矩阵
-1. $AA^{-1}=I$,$A^{-1}A=I$
+1. $AA^{-1}=I$,$A^{-1}A=I$  
+1. $Ax = b,x=A^{-1}b$
 
 >``定理1``：设$A=
 \begin{bmatrix}a & b\\
@@ -68,8 +74,9 @@ c & d\end{bmatrix}$,若$ad-bc\neq0$,则A可逆且$A^{-1}=\frac{1}{ad-bc}\begin{b
 
 >``定理2``:若A是可逆的n x n矩阵，则对每一个$R^n$中的b,方程Ax=b有唯一解x=$A^{-1}b$
 
+>``唯一性和线性无关``：若A可逆,则A所有的列向量是线性无关的;那么Ax=b,x对应唯一的b解,反之也成立;零空间只有唯一的解零向量;  
 
-
+>``可逆矩阵 = 单位矩阵``
 
 ##零空间
 Ax = 0,如果存在零空间，则零空间的维数与自由变量个数一样
@@ -80,4 +87,10 @@ Ax = 0,如果存在零空间，则零空间的维数与自由变量个数一样
 >``列空间的维数或秩``:维数就是基底向量的个数
 >``基底向量``:矩阵中线性无关的向量,它是被包含在列向量里的；矩阵通过简化后,有主元的列向量就基底向量
 
+
 >``1``:一个矩阵是线性无关的，那么它其实最后可以简化为单位矩阵，每次梯形简化就是一次矩阵相乘
+
+
+
+#特征向量和特征值
+$A^nx=b$当有这种计算时,如果存在特征向量则会简化计算
