线性代数笔记

--- a/数学/微积分/线性代数.md
+++ b/数学/微积分/线性代数.md
@@ -62,6 +62,8 @@ Ax=b
 1. $(A+B)^T=A^T+B^T$
 1. $(rA)^T=rA^T$,任意数r
 1. $(ABC)^T=C^TB^TA^T$,推广到n个矩阵，顺序相反
+1. $A^TA=$对称矩阵
+1. 对称矩阵$^T$=对称矩阵
 ##矩阵的逆$A^{-1}$
 I为单位矩阵
 1. $AA^{-1}=I$,$A^{-1}A=I$  
