--- a/数学/微积分/线性代数.md
+++ b/数学/微积分/线性代数.md
@@ -19,6 +19,17 @@ graph LR
   互相转换 --> 矩阵方程
 ```
 
+```mermaid
+graph LR
+  Ax=b求解 --> 唯一解
+  唯一解 --> 线性无关
+  Ax=b求解 --> 多解
+  多解 --> 线性相关
+  Ax=b求解 --> 无解
+
+```
+
+
 定理：每个矩阵只有一个简化阶梯形矩阵
 
 #向量空间
@@ -46,7 +57,9 @@ A=矩阵，x、b向量
 >```重点:```把线性组合看做矩阵和向量的积
 
 ##线性无关
+判断方法:Ax=0的A矩阵通过增广矩阵行变换时,各列都有一个主元,那么就是线性无关
 
+###标准矩阵
 
 #线性变换
 Ax=b
