--- a/数学/微积分/线性代数.md
+++ b/数学/微积分/线性代数.md
@@ -1,5 +1,9 @@
+#需要掌握的知识点
+- [x] 线性无关和相关
+- [x] 子空间
+  - [x] 矩阵的零空间 复习
 
-
+---
 
 ```mermaid
 graph LR
@@ -92,10 +96,31 @@ c & d\end{bmatrix}$,若$ad-bc\neq0$,则A可逆且$A^{-1}=\frac{1}{ad-bc}\begin{b
 >``唯一性和线性无关``：若A可逆,则A所有的列向量是线性无关的;那么Ax=b,x对应唯一的b解,反之也成立;零空间只有唯一的解零向量;  
 
 >``可逆矩阵 = 单位矩阵``
+---
+#<font color=red>四个子空间</font>
+##子空间成立条件
+>子空间是$R^n$的一个向量集合,只要满足以下三个条件就是子空间
+1.子空间一定含有零向量
+2.加法封闭性:子空间里的任意向量u和v,u+v属于子空间
+3.乘法封闭性:子空间任意向量u和实数c,cu属于子空间
+##表示
+span(a、b...n),表示子空间,由a、b..n向量线性组合合成,当a、b..n线性无关时,a、b..n也可表示为基
 
-##零空间
-Ax = 0,如果存在零空间，则零空间的维数与自由变量个数一样
+#1.矩阵的零空间
+Ax = 0，所有满足前面方程的x集合，成为零空间，表示为``Nul A``
 
+
+#2.列空间
+
+#3.行空间
+
+#4.行零空间
+
+
+#重要关系结论
+1. 行空间和列空间有相同的维数
+1. 行空间和列空间的基一样
+---
 ##名词解释
 >``列向量``：就是矩阵的一列的向量  
 >``列空间``：一个矩阵的列向量的线性组合  
