--- a/数学/微积分/公开课学习.md
+++ b/数学/微积分/公开课学习.md
@@ -15,6 +15,27 @@
 >介绍了Ax=b的相乘的计算方法
 - [x] 35.矩阵零空间的计算
 - [x] 36.矩阵零空间的计算
+- [x] 37.矩阵的列空间
+- [x] 38.零空间和列空间
+- [x] 39.进一步介绍列空间
+- [ ] 40.证明任意子空间基底数目相同
+- [x] 41.零空间的维数或零度
+- [x] 42.列空间的维数或秩
+- [x] 43.基底列和主列的关系
+- [x] 44.证明候选基底确实张成C(A)空间
+- [x] 40.证明任意子空间基底数目相同
+- [x] 40.证明任意子空间基底数目相同
 ---
 - [x] 33.矩阵向量积    
 >介绍了Ax=b的相乘的计算方法
+- [x] 46.向量变换
+>更进一步，扩展函数的定义说明,举向量为例子
+- [x] 47.线性变换 <font color=red>多听几遍</font>
+- [x] 48.矩阵向量乘法和线性变换的关系<font color=red>多听几遍</font>
+>重申了线性变换的两个重要定义,理解定义后,能更好地理解与矩阵向量乘法的区别
+
+- [x] 49.怎么获得线性变换T<font color=red>重点,多听几遍</font>
+>通过R2的向量和R3的向量,从而根据标准基计算出线性变换T
+
+- [x] 50.R2三角形说明线性变换
+>举一个三角形的例子，具体说明线性变换的作用
