线性代数笔记

--- a/数学/微积分/公开课学习.md
+++ b/数学/微积分/公开课学习.md
@@ -39,3 +39,39 @@
 
 - [x] 50.R2三角形说明线性变换
 >举一个三角形的例子，具体说明线性变换的作用
+
+
+
+---
+##线列式
+- [ ] 行列式基本求法,沿第一行算,了解就可以
+  - [x] 78.R2矩阵的逆矩阵的推导过程及与线列式的关系
+  - [x] 79.R3矩阵的逆矩阵的推导过程
+  - [x] 80.Rn矩阵的逆矩阵的推导过程
+- [ ] 行列式中级求法
+  - [x] 81.沿其他行或列求矩阵行列式
+    >上节课介绍了求矩阵行列式的基本方法，我们举的例子是沿着第一行算。这节课我们探索其它求矩阵行列式的方法，不仅仅是可以沿着第一行，而是能够任意挑选一行或一列，以达到简化运算的目的。
+  - [x] 82.萨吕法则
+
+- [ ] 行列式的意义
+    - [x] 90.行列式与平行四边形面积的关系
+    >先用传统方法计算线性变换后的平行四边形,然后得出的面积公式和行列式一样
+
+---
+##基变换
+- [x] 120.对应一个基底的变换矩阵
+>在看之前先看书，了解下基变换概念和公式，这样好容易看懂,这里把转移矩阵也称为转换矩阵,所以会产生概念混淆
+- [x] 121.对应一个基底的变换矩阵a
+>C为转移矩阵
+- [x] 122.对应一个基底的变换矩阵b
+>继续121基础上讲解，有具体例子，也讲了为什么要基变换原因
+
+
+---
+- [x] 124.标准正交基简介
+>介绍了正交基的性质
+---
+##向量的性质
+- [x] 21.向量的点积和长度
+- [x] 22.向量点积的性质及证明
+>看书就可以了
