--- a/数学/微积分/线性代数.md
+++ b/数学/微积分/线性代数.md
@@ -2,6 +2,7 @@
 - [x] 线性无关和相关
 - [x] 子空间
   - [x] 矩阵的零空间 复习
+- [x] 基变换
 
 ---
 
@@ -74,7 +75,7 @@ A=矩阵，x、b向量
 
 #线性变换
 Ax=b
-可以看做一个函数,x的向量经过A变换后，得到一个b向量，和函数是一样的
+可以看做一个函数,标准基下的x向量经过A变换后，得到一个在A的坐标空间的b向量，和函数是一样的
 
 ##矩阵乘法的性质
 社A为m x n矩阵
@@ -128,12 +129,30 @@ Ax = 0，所有满足前面方程的x集合，成为零空间，表示为``Nul A
 1. 行空间和列空间有相同的维数
 1. 行空间和列空间的基一样
 ---
+#基变换
+>``基变换是什么？``:在$R^n$中除了标准基之外，还存在许多基,有时在标准基计算下,会比较麻烦，为了方便，
+可以转换为其他基下面换算，再转回原来的矩阵，这时就需要基变换了  
+
+>``转移矩阵``:有另个B基为$(1,2)^T,(3,4)^T$,则可变为如$\begin{bmatrix}1 & 3\\2 & 4\end{bmatrix}$的转移矩阵，主要
+是从B基转换为标准基，转移矩阵的逆才能从标准基转换为B基
+
+#标准正交基
+1. 所有基向量长度都是1
+2. 所有基向量互相垂直
+
+
+---
 ##名词解释
 >``列向量``：就是矩阵的一列的向量  
 >``列空间``：一个矩阵的列向量的线性组合  
 >``列空间的维数或秩``:维数就是基底向量的个数
 >``基底向量``:矩阵中线性无关的向量,它是被包含在列向量里的；矩阵通过简化后,有主元的列向量就基底向量
 
+###求特征向量
+Av=$\lambda{v} --> Av-\lambda{v}=0-->(\lambda{I}-A)v=0$
+求$(\lambda{I}-A)$的行列式为0,就求出了特征向量
+
+1.Ax=$\lambda{x}$,By=$\lambda{y}$,则A+b和AB都是另个矩阵
 
 >``1``:一个矩阵是线性无关的，那么它其实最后可以简化为单位矩阵，每次梯形简化就是一次矩阵相乘
 
@@ -141,3 +160,31 @@ Ax = 0，所有满足前面方程的x集合，成为零空间，表示为``Nul A
 
 #特征向量和特征值
 $A^nx=b$当有这种计算时,如果存在特征向量则会简化计算
+
+
+
+---
+#向量性质
+##点积
+>``定理1``:设a、b和w是$R^n$空间的的向量，t是一个数  
+1.$a\bullet{b} = b\bullet{a}$
+2.$(a+b)\bullet{c}=a\bullet{c}+b\bullet{c}$
+3.$(ta)\bullet{b}=t(a\bullet b)=a(t\bullet b)$
+4.$a\bullet a\geqslant 0$,并且$a\bullet a=0$成立的充分必要条件是a=0
+
+
+
+##向量的长度
+>``定义``:向量v的长度是非负数$\|a\|$，则$\|a\|=\sqrt{a\bullet a}$,且$\|a\|^2=a\bullet a$
+>``定义原理``:想象二维、三维的勾股定理，可以把这个推广到n维
+>``单位化``:$u=\frac{1}{\|a\|}a$,用该公式就可以计算出a长度为1的单位向量
+
+##$R^n$的向量间距离
+>``定义``:$R^n$中向量a和b的距离，记做dis(a,b),表示向量a-b的长度，即dist(a,b)=$\|a-b\|$
+
+##正交
+>``正交性``:当$a\bullet b$=0时,表示a和b向量互相垂直
+>定理:向量正交的充分必要条件是$\|a+b\|^2=\|a\|^2+\|b\|^2$
+
+##$R^2,R^3$的角度
+>``公式``:$a\bullet b=\|a\|\bullet \|b\|cos \theta$
