--- a/数学/概率论/概率论.md
+++ b/数学/概率论/概率论.md
@@ -1,5 +1,14 @@
+大数定理---->概率
+coursera
 #基本概念
 ###基本事件
 >``基本事件``:投一次骰子只能有6种结果,分别是{1、2、3、4、5、6},就叫做基本事件
 >``事件``:比如扔一次硬币的基本事件是{正面H,反面F},扔2次的由基本事件组合而成的叫事件,分别是
 {HH,HF,FH,FF},可以把2次扩展为n次,各个事件相加为1
+
+
+
+
+#概率公式
+##全概率公式
+https://blog.csdn.net/qq_33638791/article/details/52496516
