概率论笔记

--- a/数学/概率论/概率论.md
+++ b/数学/概率论/概率论.md
@@ -12,3 +12,14 @@ coursera
 #概率公式
 ##全概率公式
 https://blog.csdn.net/qq_33638791/article/details/52496516
+
+##贝叶斯公式
+作用：解决逆向概率问题
+
+#概率类型
+##正向概率
+>正向概率:假设袋子里面有N个白球，M个黑球，你伸手进去摸一把，摸出黑球的概率是多大
+
+
+##逆向概率
+>逆向概率:如果我们事先并不知道袋子里面黑白球的比例，而是闭眼睛摸出一个球，观察这些取出来的颜色之后，那么我们可以就此对袋子里面的黑白球的比例做出什么样的推测
