--- a/数学/微积分/公式.md
+++ b/数学/微积分/公式.md
@@ -98,4 +98,8 @@ $log_b(x)$ = K$log_c(x)$,其中K为 $\frac{1}{log_c(b)}$
 
 1. $\int_{a}^{b}f(x)dx$ = $\int_{a}^{c}f(x)dx$ + $\int_{c}^{b}f(x)dx$
 
-1. $\int_{a}^{a}f(x)dx$ = 0
+
+
+定积分公式：
+
+![](assets/markdown-img-paste-20180723235304784.png)
