--- a/数学/微积分/微积分.md
+++ b/数学/微积分/微积分.md
@@ -9,7 +9,8 @@
 graph LR
   源函数 --> 极限
   极限 --> 导数;
-  极限 --> 定积分;
+  极限 --> 积分;
+  积分 --> 定积分;
   定积分 --> 不定积分;
   不定积分 --> 源函数;
   导数 --> 微分;
@@ -44,6 +45,33 @@ $f^\prime = \frac{dy}{dx} = \frac{d(x^2)}{dx} = \frac{d}{dx}(x^2) = 2x$
 | > | 1 |
 | 2 |   |
 
-#1
-dfsfddsf#1
-mojombo/github-flavored-markdown#1
+
+
+##积分、不定积分、定积分
+
+
+积分：![](assets/markdown-img-paste-20180723201151500.png)
+
+不定积分：![](assets/markdown-img-paste-20180723232522828.png)
+定积分定义：
+
+![](assets/markdown-img-paste-20180723200821626.png)
+
+奇函数的定积分：$\int_{-a}^{a}f(x)dx=0$
+
+###定积分性质
+1. $\int_{a}^{b}f(x)dx$ = - $\int_{b}^{a}f(x)dx$
+
+1. $\int_{a}^{a}f(x)dx$ = 0
+
+1. $\int_{a}^{b}f(x)dx$ = $\int_{a}^{c}f(x)dx$ + $\int_{c}^{b}f(x)dx$
+
+1. $\int_{b}^{a}Cf(x)dx$ = C$\int_{b}^{a}f(x)dx$
+
+1. $\int_{a}^{b}(f(x)+g(x))dx$ = $\int_{a}^{b}f(x)dx$+$\int_{a}^{b}g(x)dx$
+
+
+
+不定积分和定积分的区别？
+
+![](assets/markdown-img-paste-20180723232650823.png)
