--- a/python/爬虫/爬虫.md
+++ b/python/爬虫/爬虫.md
@@ -16,6 +16,23 @@ import urllib.request
 import requests
 r = requests.get('http://httpbin.org/get')
 print(r.text)
+##lxml
+1.pip3 install lxml 没报错,则安装成功
+2.如果报libxml2没找到错误,则先
+![](assets/markdown-img-paste-20180731233506206.png)
+查看python版本
+3.执行下面代码,获取截图红框所示
+> #AMD64
+> import pip._internal
+> print(pip._internal.pep425tags.get_supported())
+![](assets/markdown-img-paste-20180731233711641.png)
+4.到https://www.lfd.uci.edu/~gohlke/pythonlibs/#lxml 下载对应的lxml版本
+![](assets/markdown-img-paste-20180731233828699.png)
+
+4.pip3 install lxml-4.2.3-cp37-cp37m-win_amd64.whl
+5. 验证是否安装lxml成功
+![](assets/markdown-img-paste-20180731234006730.png)
+没报错就说明安装成功
 
 #代理
 ![](.png)
