--- a/数学/微积分/公式.md
+++ b/数学/微积分/公式.md
@@ -15,6 +15,7 @@
 	* [基本公式](#基本公式)
 	* [和、差、商、积的求导法则](#和-差-商-积的求导法则)
 * [定积分](#font-colorred定积分font)
+* [三角函数公式](#三角函数公式)
 
 <!-- /code_chunk_output -->
 
@@ -27,6 +28,13 @@ $1^2+2^2+3^2+.....+n^2 = \frac{n(n+1)(2n+1)}{6}$
 1. $\mathop{lim}\limits_{x\to\infty}\frac{C}{x^n}$ = 0 ,C为常数且n>正整数
 1. $\mathop{lim}\limits_{x\to0^-}\frac{|x|}{x}$ = -1 ,$\mathop{lim}\limits_{x\to0^+}\frac{|x|}{x}$ = 1
 
+![](assets/markdown-img-paste-20180726233749435.png)
+
+![](assets/markdown-img-paste-20180726233759360.png)
+
+![](assets/markdown-img-paste-2018072623384290.png)
+
+![](assets/markdown-img-paste-20180727001131523.png)
 ###三角函数
 1. $\mathop{lim}\limits_{x\to0}\frac{sin\ x}{x}$ = 1
 1. $\mathop{lim}\limits_{x\to0}\frac{tan\ x}{x}$ = 1
@@ -52,10 +60,12 @@ $1^2+2^2+3^2+.....+n^2 = \frac{n(n+1)(2n+1)}{6}$
 1. $log_b(1)$ = 0
 1. $log_b(b)$ = 1
 1. $log_b(xy)$ = $log_b(x)$ + $log_b(y)$
-1. $log_b(\frac{x}{y})$
+1. $log_b(\frac{x}{y})= log_b(x) - log_b(y)$
 1. $log_b(x^y)$ = y$log_b(x)$
 1. $log_e(x)$ = $ln(x)$
+1. ![](assets/markdown-img-paste-20180725234412345.png)
 
+1. ![](assets/markdown-img-paste-20180725234437235.png)
 ##2. 换底法则
 ``条件:``b>1和c>1及x>0
 
@@ -79,9 +89,11 @@ $log_b(x)$ = K$log_c(x)$,其中K为 $\frac{1}{log_c(b)}$
 1. $(e^x)^\prime= e^x$
 1. $(log_ax)^\prime= \frac{1}{xln\ a}$
 1. $(ln\ x)^\prime= \frac{1}{x}$
-1. $(arcsin\ x)^\prime= \frac{1}{\sqrt{1-x^2}}$
-1. $(arccos\ x)^\prime= -\frac{1}{\sqrt{1-x^2}}$
-1. $(arctan\ x)^\prime= \frac{1}{{1+x^2}}$
+1. $(arcsin\ x)^\prime=(sin^{-1}x)^\prime = \frac{1}{\sqrt{1-x^2}}$
+
+1. $(arccos\ x)^\prime=(cos^{-1}x)^\prime = -\frac{1}{\sqrt{1-x^2}}$
+
+1. $(arctan\ x)^\prime=(tan^{-1}x)^\prime =\frac{1}{{1+x^2}}$
 1. $(arccot\ x)^\prime= -\frac{1}{{1+x^2}}$
 
 
@@ -103,3 +115,14 @@ $log_b(x)$ = K$log_c(x)$,其中K为 $\frac{1}{log_c(b)}$
 定积分公式：
 
 ![](assets/markdown-img-paste-20180723235304784.png)
+
+---
+#三角函数公式
+
+![](assets/markdown-img-paste-2018072423464792.png)
+
+![](assets/markdown-img-paste-20180724234658455.png)
+
+![](assets/markdown-img-paste-20180725000103802.png)
+
+![](assets/markdown-img-paste-20180725000118666.png)
