--- a/数学/微积分/微积分.md
+++ b/数学/微积分/微积分.md
@@ -1,3 +1,11 @@
+#基础知识
+##有理函数
+
+![](assets/markdown-img-paste-20180726202831628.png)
+
+##不定式
+$\frac{0}{0}$
+
 #知识关联
 1. 如果f(x)在a点极限存在,那么f(a)点连续,那么可导；
 2. 可导函数其实就是求极限的过程
@@ -11,6 +19,9 @@ graph LR
   极限 --> 导数;
   极限 --> 积分;
   积分 --> 定积分;
+  积分 --> 洛必达法则;
+  洛必达法则 --> 极限;
+
   定积分 --> 不定积分;
   不定积分 --> 源函数;
   导数 --> 微分;
@@ -22,15 +33,31 @@ graph LR
 使得f(c)=0。代之以f(a)>0且f(b)<0,同样成立
 1. > ``最大值和最小值定理``:如果f在[a,b]上``连续``，那么f在[a,b]上至少有一个最大值和最小值
 
-
+-----
 #导数部分
-##导数
-1. $\mathop{lim}\limits_{x\to x0}\frac{f(x) - f(x_0)}{x-x0}$
->如果x-x0$\rightarrow$0时的极限存在，则在x0处可导，并称这个极限为导数,记为$f^\prime(x0)$
-
->导数是极限，因此存在的充分必要条件是左右极限存在且相等
 ##导函数
->导函数:如果x在M区间上都可导,就构成一个新函数,导函数
+1. $f^\prime(x)=\mathop{lim}\limits_{h\to0}\frac{f(x+h) - f(x)}{h}$
+>其中h=$x-x_0$,从式子可以看出,导函数就是求极限,也叫导数
+>如果极限不存在,则导数不存在
+##函数不存在情况
+1.函数连续间，有个不是滑顺而是尖的,这种情况导数左右极限不相等
+
+##导数和连续性关系
+>函数在x上可导，则在x上一定是连续的;
+>反之,函数连续,并不一定可导
+
+##导数法则及公式
+###乘积法则
+
+![](assets/markdown-img-paste-20180726223926810.png)
+
+![](assets/markdown-img-paste-20180726223937449.png)
+由上面知道,可以推广为n乘积
+###商法则
+![](assets/markdown-img-paste-20180726224226745.png)
+
+###链式法则
+![](assets/markdown-img-paste-20180726224357248.png)
 
 ##表现形式
 比如f(x) = $x^2$
@@ -40,10 +67,7 @@ $f^\prime = \frac{dy}{dx} = \frac{d(x^2)}{dx} = \frac{d}{dx}(x^2) = 2x$
 
 
 
-| a | b |
-|---|---|
-| > | 1 |
-| 2 |   |
+----
 
 
 
@@ -75,3 +99,49 @@ $f^\prime = \frac{dy}{dx} = \frac{d(x^2)}{dx} = \frac{d}{dx}(x^2) = 2x$
 不定积分和定积分的区别？
 
 ![](assets/markdown-img-paste-20180723232650823.png)
+
+
+#反常积分
+##反常积分判定
+1. 函数f在闭区间[a,b]内是无界的,a或b有垂直渐近线
+1. b = $\infty$
+1. a = -$\infty$
+
+##闭区间的反常积分
+
+![](assets/markdown-img-paste-20180725222537192.png)
+1.在a点有垂直渐近线
+![](assets/markdown-img-paste-20180725222621688.png)
+
+2.在b点有垂直渐近线
+![](assets/markdown-img-paste-20180725223138696.png)
+
+3.在[a,b]中某个c点有垂直渐近线
+![](assets/markdown-img-paste-20180725223355663.png)
+注意:只有当这两部分的积分都收敛时,积分才收敛
+
+
+上面3三情况计算方法：
+根据上面的定义,先算出不定积分，然后再用极限求出值,根据值判定是否为反常积分
+
+##无穷区间的反常积分
+1.只有一个点是无穷
+![](assets/markdown-img-paste-20180725224325708.png)
+
+![](assets/markdown-img-paste-2018072522490870.png)
+
+2.两个点都是无穷
+
+![](assets/markdown-img-paste-20180725225109193.png)
+
+![](assets/markdown-img-paste-20180725225257346.png)
+求法:先在区间里选个c,然后分为两个部分,分别求收敛,两个都收敛则证明原来的是收敛的
+
+##比较判别法
+1.如果在区间(a,b)内,函数f(x)>=g(x)>=0,且积分$\int_{a}^{a}g(x)dx$是发散的,那么积分$\int_{a}^{a}f(x)dx$也是发散的
+
+重点:该方法是用一个反常积分的结果去判别另个函数的反常积分
+##极限比较判别法
+
+
+##绝对收敛判别法
