--- a/英语/英语语法.md
+++ b/英语/英语语法.md
@@ -176,3 +176,18 @@ like、love、hate、want、need、prefer
 
 
 ## present simple[一般现在时]
+
+
+
+#情态动词
+1. can
+表示
+
+
+---
+#从句
+##定语从句
+被修饰|关系
+-|-
+person|who、that
+thing|whick、that
