--- a/英语/英语语法.md
+++ b/英语/英语语法.md
@@ -1,3 +1,6 @@
+#网站
+http://zhibimo.com/read/xiaolai/a-new-english-reading-handbook/093.html
+
 #介词
 ##表示时间
 1. after
@@ -163,6 +166,28 @@ Whether A or B 不管是A或B ，会...
 1. not only...but also...
 表示“不仅……而且”“既……又”，用于连接两个性质相同的词或短语
 
+1. hardly…when...
+它的意思是“几乎未来得及做完A这件事，紧接着就开始B这件事。”
+使用这个短语时，一般用于过去完成时；并且when有时可改用before。例如：
+He had hardly finished the article when the light went out.
+他刚写完文，灯就熄了。
+He had hardly had time to settle down when he sold the house.
+他还未安顿下来，就卖掉了那所房子。
+另外，如果把hardly放于句首，主句要用倒装结构即谓语动词要提前。如：
+Hardly had I finished eating when he came in.
+我刚吃完他就进来了。
+Hardly had she gone out when a student came to visit her.
+她还没走出家门，就有一个学生来看望她。
+
+1. no sooner…than
+它的意思相当于“刚做完A这件事，就做B这件事”。例如：
+He had no sooner returned than he bought a house.
+他一回来就买了一套房子。
+如果no sooner 位于句首，主句要用倒装结构。例如：
+No sooner had he arrived than he went away again.
+他刚到就又走了。
+No sooner had the game started　No sooner had the game started　 than it began to rain heavily运动会刚开始，天就下起了大雨。
+有一点要注意，no sooner…than 一般用来描述做过的事情，它不能用于表示将来的事。
 
 
 #时态
