--- a/编译/编译.md
+++ b/编译/编译.md
@@ -30,6 +30,7 @@ gcc -E {input file} -o {output file}.i
 
 #查看静态库
 1. 查看包含.o文件
->readelf -s libevent_dns.a | grep -n ABS
+>readelf -s libavcodec.a | grep -n ABS
 
 ![](.png)
+readelf -s libavcodec.a | grep -n ABS
