--- a/数学/线性代数/线性笔记/线性.md
+++ b/数学/线性代数/线性笔记/线性.md
@@ -1,12 +1,10 @@
 #正交性
 ##$R^n$的正交性
 1. $R^n$的长度
-![](.png)
+
 
 2. 柯西-施瓦瓷不等式
-![](.png)
-![](.png)
-![](.png)
+
 
 ##子空间的正交性
 1. 正交补
@@ -14,37 +12,38 @@
 
 公式:Y + $Y^\bot$ = $R^n$
 
-![](.png)
 
-![](.png)
-
-![](.png)
-
-![](.png)
 
 2. 基本子空间
 >定理：若A为m * n矩阵,则N(A)=$R(A^T)^\bot$,且$N(A^T)=R(A)^\bot$
 
 3. 正交集
 >正交基:互相正交,但不是每个向量都是长度为1
+>定理：一个m*n矩阵U具有单位正交列向量的充分必要条件是$U^TU=I$
+>解读：因为单位向量与自己相乘会得到1,与其他正交向量相乘会得到0,所以最后会得到单位矩阵
 
-![](.png)
-
-![](.png)
 
 4. 正交投影
-
-![](.png)
-
-![](.png)
-
-![](.png)
 ![](2.png)
+![](5.png)
+
+
 ![](1.png)
 ![](3.png)
+>定理10,是定理9的进化版,这样能更加简单的计算
 ![](4.png)
 >正交矩阵：为一个方正,且列向量都是一个个单位正交基,所以$U^{-1}=U^T$
+5. 格拉姆-施密特方法
+>作用：如何构造正交基,然后能应用正交的性质
+![](6.png)
+>理解：1.先选择一个v1作为一维空间
+>2.然后v2在v1上做投影
+>3. v3在span{v1,v2}的二维子空间做投影,一直循环
 
+6. 最小二乘
+>![](7.png)
+
+>![](8.png)
 #特征值和特征向量
 ##寻找特征值和特征向量
 1.
@@ -88,3 +87,17 @@ $A^k=PD^KP^{-1}$
 >2. 然后用求到的特征值,代入(A-$\lambda$I)x=0,求出(A-$\lambda$I)的零空间,零空间就是该特征值的特征空间
 >3. 求到特征值和特征空间后, 把值代入$PDP^{-1}$
 >4. 因为有了特征向量组成的特征向量基,那么可以把X0用特征向量基表示
+
+
+
+#对称矩阵
+
+>对特征
+>![](9.png)
+
+>证明矩阵A是否为对称
+>![](10.png)
+
+>![](11.png)
+
+>![](12.png)
