--- a/数学/微积分/线性代数.md
+++ b/数学/微积分/线性代数.md
@@ -40,7 +40,19 @@ graph LR
   单位矩阵 --> 可逆
   可逆 --> 行列式
 ```
+---
+#矩阵的运算
+###加减法
+A + B = B + A
+###乘法
+A * B 不一定等于 B * A
+A * I = I * A = A (I为单位矩阵, 前提A为n * n矩阵)
+### 矩阵的逆
+前提：A为n * n矩阵
+$A^{-1}A$ = $AA^{-1}$ = 单位矩阵I
 
+
+---
 
 定理：每个矩阵只有一个简化阶梯形矩阵
 
@@ -188,3 +200,10 @@ $A^nx=b$当有这种计算时,如果存在特征向量则会简化计算
 
 ##$R^2,R^3$的角度
 >``公式``:$a\bullet b=\|a\|\bullet \|b\|cos \theta$
+
+
+#杂记
+>多向量加法的数学本质，实际上是这些向量在坐标轴上（以 0 点为坐标原点的坐标系）的投影
+（或坐标分量）的合成（相加或相减）后的结果。
+向量的更高一级的运算如点积、叉积的定义也是
+这个数学本质的体现。
