--- a/数学/线性代数/线性笔记/线性.md
+++ b/数学/线性代数/线性笔记/线性.md
@@ -1,3 +1,6 @@
+#标识
+>dimA:表示A空间的维数
+
 #正交性
 ##$R^n$的正交性
 1. $R^n$的长度
@@ -88,3 +91,19 @@ $A^k=PD^KP^{-1}$
 >2. 然后用求到的特征值,代入(A-$\lambda$I)x=0,求出(A-$\lambda$I)的零空间,零空间就是该特征值的特征空间
 >3. 求到特征值和特征空间后, 把值代入$PDP^{-1}$
 >4. 因为有了特征向量组成的特征向量基,那么可以把X0用特征向量基表示
+
+#向量空间
+##基的变换
+x = C<sub>1</sub>X<sub>1</sub>+..+C<sub>n</sub>X<sub>n</sub>
+>span{X<sub>1</sub>,..,X<sub>n</sub>}表示线性无关的基
+>[x]<sub>B</sub>=[C<sub>1</sub> .. C<sub>n</sub>],其中B表示向量空间,[x]<sub>B</sub>表示向量坐标
+
+>基：是一个向量空间,n个线性无关的向量可以组成成唯一一个向量的最小向量集合
+
+>向量坐标：每个向量由向量坐标唯一确定
+
+>坐标映射:从一个坐标向量B映射到坐标向量C,前提条件是$R^m$向量空间下的基,不是m->n
+
+>坐标变换矩阵:能把一个坐标向量B映射到坐标向量C的矩阵,因此矩阵一定**可逆**.
+
+>默认坐标映射：标准基是默认转换为其他基的
