--- a/英语/身体单词.md
+++ b/英语/身体单词.md
@@ -1,51 +1,85 @@
+
 ----------------------头---------------------------
-1. hair 头发
+
+#眼睛有关
 1. cornea 眼角膜
-1. mustache 胡子 beard 胡须
-1. thumb 拇指
+1. pupil 瞳孔
+1. eye 眼睛
+1. eyelid 眼皮
+1. retina 视网膜
+#嘴相关
+1. mouth 嘴
+1. lip 嘴唇
+1. tongue 舌头
+1. tooth 牙齿
+1. gum 牙龈
+1. incisor 门牙
+1. denture 假牙
+1. saliva 唾液
+1. spit 唾液
+1. throat 咽喉
+1. cavity 蛀牙
+#和毛相关
+1. mustache 胡子
+1. beard 胡须
 1. sideburn 鬓角
 1. eyebrow 眉毛
 1. eyslash 睫毛
-1. retina 视网膜
-1. chin 下巴
-1. nose 鼻子 nostril 鼻孔
+1. hair 头发
+#耳朵相关
+1. ear 耳朵
+1. eardurm 耳膜
+1. cochlea 耳蜗
+#鼻子相关
+1. nose 鼻子
+1. nostril 鼻孔
+
+#其他
+1. cheek 脸颊
+1. dimple 酒窝
 1. forehead 前额
 1. skull 头盖骨
-1. denture 假牙
-1. eye 眼睛 eyelid 眼皮
-1. brain 大脑
-1. cavity 蛀牙
-1. cheek 脸颊
-1. cochlea 耳蜗
 1. crown 头顶
-1. dimple 酒窝
-1. ear 耳朵 eardurm 耳膜
-1. gum 牙龈 incisor 门牙
 1. head 头
-1. knuckle 指关节
-1. lip 嘴唇
-1. mouth 嘴
+1. chin 下巴
+1. brain 大脑
+1. temple 太阳穴
 1. neck 颈部
 1. ophryon 眉间
-1.
+
 ---------------------中间----------------------
-1. arm 手臂  forearm 前臂 elbow 肘部 finger 手指 forefinger 食指
+#手相关
+1. arm 手臂  
+1. forearm 前臂
+1. elbow 肘部
+1. wrist 手腕
 1. hand 手
+1. palm 手掌，手心
 1. fist 拳头
+1. finger 手指
+1. forefinger 食指
+1. thumb 拇指
+1. knuckle 指关节
+
+
+#躯干
 1. shoulder 肩膀
-1. abdomen 腹部 belly 腹部
-1. navel 肚脐
 1. armpit 咯吱窝
-1. breast lufang
-1. lumber 腰部的
-1. back 背部
+1. abdomen 腹部
+1. belly 腹部
 1. chest 胸部
 1. rib 肋骨
-1. heal 脚后跟
+1. breast 乳房
 1. nipple 乳头
-1. palm 手掌，手心
+1. navel 肚脐
+1. lumber 腰部的
+1. back 背部
+
 ---------------------下半身--------------------------
+1. penis 阴茎
+1. heal 脚后跟
 1. knee 膝盖
+1. kneel v.跪下
 1. instep 脚背
 1. shank 小腿 calf 腿肚子
 1. nail 趾甲
@@ -58,7 +92,9 @@
 1. womb 子宫
 1. foot 脚
 1. hip 臀部
-
+1. thigh 大腿
+1. toe 脚趾
+1. waist 腰部
 ----------------------- 其他 ----------------
 1. mole 痣
 1. acne 痔疮，青春痘
@@ -70,3 +106,9 @@
 1. joint 关节
 1. mustache 肌肉
 1. palate 味觉
+1. philtrum 人中
+1. physical 身体的
+1. pore 毛孔
+1. skin 皮肤
+1. tonsil 扁桃体
+1. trachea 气管
