--- a/数学/概率论和数理统计/概率论.md
+++ b/数学/概率论和数理统计/概率论.md
@@ -23,3 +23,13 @@ https://blog.csdn.net/qq_33638791/article/details/52496516
 
 ##逆向概率
 >逆向概率:如果我们事先并不知道袋子里面黑白球的比例，而是闭眼睛摸出一个球，观察这些取出来的颜色之后，那么我们可以就此对袋子里面的黑白球的比例做出什么样的推测
+
+
+
+![](assets/markdown-img-paste-20190509213345944.png)
+
+#样本空间概念
+试验结果：一个试验可能产生的结果叫试验结果,每个试验结果必是互斥
+试验：每次试验只能产生一个试验结果
+事件：是试验结果集合
+样本空间：互斥的事件组合成样本空间,想象成切蛋糕
