--- a/数学/概率论和数理统计/概率论.md
+++ b/数学/概率论和数理统计/概率论.md
@@ -23,3 +23,14 @@ https://blog.csdn.net/qq_33638791/article/details/52496516
 
 ##逆向概率
 >逆向概率:如果我们事先并不知道袋子里面黑白球的比例，而是闭眼睛摸出一个球，观察这些取出来的颜色之后，那么我们可以就此对袋子里面的黑白球的比例做出什么样的推测
+#术语
+>前提条件：扔硬币可能性为{正面、反面}
+>事件：发生的各种可能性
+>试验：对事件的确认
+>基本事件：事件= 基本事件+基本事件
+>总结：比如扔硬币在没扔前的可能性为{正面、反面},而这种就是事件;然后到底是不是这样呢,就要进行真正的实验,这就是试验
+
+>随机事件：不确定性,在(0,1)
+>必然事件,不可能事件：1,0
+
+>条件概率：P(A|B),在B条件下,A发生的概率
